lib/manifests/rhcl/rhcl-operator.yaml
# RHCL Operator for RHOAI 3.3 (also works with 3.4)
# Follows RHCL official CLI install: all resources in kuadrant-system
# Reference: https://docs.redhat.com/en/documentation/red_hat_connectivity_link/1.3/html-single/installing_on_openshift_container_platform/index
---
apiVersion: v1
kind: Namespace
metadata:
  name: kuadrant-system
